fix: payment and delivery cell overflow fix
https://jira.railsc.ru/browse/GOODS-2614
https://jira.railsc.ru/browse/GOODS-2623

--- a/src/Table/styles/e-table.scss
+++ b/src/Table/styles/e-table.scss
@@ -391,3 +391,7 @@
   -webkit-line-clamp: 8;
   -webkit-box-orient: vertical;
 }
+
+.payment-cell-text-wrapper {
+  overflow: hidden;
+}
